changed the page title

--- a/Watson-NLP-REST-App/src/main/resources/templates/index.html
+++ b/Watson-NLP-REST-App/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<title>Spring Boot Thymeleaf - Bootstrap WebJars</title>
+	<title>Watson NLP REST Client</title>
 
 	<link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}" />
 
