--- a/MLOps/Watson-NLP-REST-App/src/main/resources/templates/index.html
+++ b/MLOps/Watson-NLP-REST-App/src/main/resources/templates/index.html
@@ -15,11 +15,8 @@
 <body>
 	<nav class="navbar navbar-dark bg-primary">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="/index">
-				<img th:src="@{/logo/ibm_logo.png}" alt="" width="60" height="40" class="d-inline-block align-text-top">
-			</a>
 			<a class="navbar-brand" href="/index">Watson NLP REST Client</a>
-			<a class="navbar-brand" href="/index">Build Labs</a>
+			<a class="navbar-brand" href="/index">Build Lab</a>
 		</div>
 	</nav>
 
